CHANGES-1.4.txt
---------------

CHANGES IN CUPS V1.4.7

	- Documentation changes (STR #3720)
	- The scheduler now only looks up interface hostnames if HostNameLookups
	  are enabled (STR #3737)
	- Fixed a compilation problem on DragonFly BSD (STR #3738)
	- The default PageLogFormat value had the username and job ID swapped
	  from CUPS 1.3.x (STR #3727)
	- The web interface did not allow setting of a default custom page size
	  (STR #3707)
	- The scheduler could crash if a browsed printer times out while a job
	  is printing (STR #3754)
	- The scheduler incorrectly mapped custom page sizes to standard sizes
	  (STR #3764)
	- cupsfilter and pstops did not map IPP attributes to PPD options due to
	  a change in cupsMarkOptions (STR #3756)
	- The scheduler did not always show the most recent status message from
	  the print filters (STR #3731)
	- The PostScript filter did not apply the mirror and number-up options
	  properly, leading to offset and clipped output (STR #3732)
	- The network backends always reported "low toner" or "out of toner"
	  states, even for inkjet printers (STR #3733)


CHANGES IN CUPS V1.4.6

	- Fixed a "make check" issue on Solaris (STR #3729)
	- Regression: The pstops filter did not support landscape printing of
	  PostScript files (STR #3722)
	- The scheduler killed retried (fax) jobs after restarting them
	  (STR #3697)
	- The cupsAdminSetServerSettings() function disabled sharing when
	  debug logging was enabled (STR #3712)


CHANGES IN CUPS V1.4.5

	- Documentation fixes (STR #3542, STR #3650)
	- Localization fixes (STR #3635, STR #3636, STR #3647, STR #3666)
	- Security: Fixed a memory corruption bug reported in CVE-2010-2941
	  (STR #3648)
	- The CUPS API incorrectly mapped the HTTP_UNAUTHORIZED status to the
	  IPP_NOT_AUTHORIZED status code, when IPP_NOT_AUTHENTICATED would be
	  the correct mapping (STR #3684)
	- The scheduler would restart jobs while shutting down (STR #3679)